2003-07-14  Martin Baulig  <martin@ximian.com>

	* ecore.cs (FieldExpr.DoResolveLValue): Fixed bug #46198.

2003-07-14  Martin Baulig  <martin@ximian.com>

	* codegen.cs (EmitContext.InFixedInitializer): New public field.

	* ecore.cs (IVariable.VerifyFixed): New interface method.

	* expression.cs (Unary.ResolveOperator): When resolving the `&'
	operator, check whether the variable is actually fixed.  Fixes bug
	#36055.  Set a variable definitely assigned when taking its
	address as required by the spec.

	* statement.cs (LocalInfo.IsFixed): New field.
	(LocalInfo.MakePinned): Set `IsFixed' to true.

2003-07-14  Ravi Pratap M  <ravi@ximian.com>

	* attribute.cs (Attribute.Resolve): While doing a Member lookup
	for .ctors, ensure that we only ask for members declared in the
	attribute type (BindingFlags.DeclaredOnly).

	Fixes bug #43632.

	* expression.cs (Error_WrongNumArguments): Report error 1501
	correctly the way CSC does.

2003-07-13  Martin Baulig  <martin@ximian.com>

	* expression.cs (MemberAccess.ResolveAsTypeStep): Try to do a type
	lookup on the fully qualified name, to make things like "X.X" work
	where "X.X" is a fully qualified type name, but we also have a
	namespace "X" in the using list.  Fixes #41975.

2003-07-13  Martin Baulig  <martin@ximian.com>

	* assign.cs (Assign.GetEmbeddedAssign): New protected virtual
	function. If we're a CompoundAssign, we need to create an embedded
	CompoundAssign, not an embedded Assign.
	(Assign.DoResolve): Make this work for embedded CompoundAssign's.
	Fixes #45854.

2003-07-13  Martin Baulig  <martin@ximian.com>

	* typemanager.cs (TypeManager.IsNestedChildOf): Make this actually
	work to fix bug #46088.

2003-07-13  Ravi Pratap <ravi@ximian.com>

	* class.cs (Operator.Emit): Do not emit attributes here - it is
	taken care of by the Method class that we delegate too. This takes
	care of bug #45876.
	
2003-07-10  Martin Baulig  <martin@ximian.com>

	* expression.cs (TypeOfVoid): New class.